--- a/epicure/src/component/Hero/heroStyle.css
+++ b/epicure/src/component/Hero/heroStyle.css
@@ -2,19 +2,14 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100vh;
-  width: 100%;
 }
-#background-img{
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: -1;
+#background-img {
+  object-fit: cover;
   width: 100%;
-  height: 100vh;
+  max-height: 90vh;
 }
 #white-div {
-  z-index: 1;
+  position: absolute;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -53,10 +48,8 @@ input {
   height: 37px;
   width: 80%;
   color: rgb(0, 0, 0);
-
 }
-input::placeholder{
-    font-family: "Helvetica";
-    font-size: 25px;
-
+input::placeholder {
+  font-family: "Helvetica";
+  font-size: 25px;
 }
