--- a/epicure/src/component/SingleRest/SingleRest.css
+++ b/epicure/src/component/SingleRest/SingleRest.css
@@ -1,11 +1,49 @@
-#popular{
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
+#popular {
+    margin-top: 80px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  gap: 40px;
 }
-#three-div{
-    display: flex;
-    flex-direction: row;
-
+#three-div {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 25px;
+  width: 74vw;
+}
+.rest {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 33%;
+  background-color: #faf2e3;
+}
+.food {
+  /* object-fit:fill; */
+  width: 100%;
+}
+.rest .info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 40%;
+}
+.rest h1 {
+  font-family: "Helvetica medium";
+  font-size: 37px;
+  line-height: 47px;
+  letter-spacing: 2.67px;
+  text-align: left;
+}
+.rest p {
+  font-size: 21px;
+  font-weight: 200;
+  line-height: 30px;
+  letter-spacing: 1.9700000286102295px;
+  text-align: left;
+}
+.rating {
+  scale: 0.6;
 }
