--- a/epicure/src/component/SingleRest/SingleRest.css
+++ b/epicure/src/component/SingleRest/SingleRest.css
@@ -1,18 +1,3 @@
-#popular {
-    margin-top: 80px;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-  gap: 40px;
-}
-#three-div {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  gap: 25px;
-  width: 74vw;
-}
 .rest {
   display: flex;
   flex-direction: column;
@@ -21,7 +6,6 @@
   background-color: #faf2e3;
 }
 .food {
-  /* object-fit:fill; */
   width: 100%;
 }
 .rest .info {
@@ -31,8 +15,9 @@
   height: 40%;
 }
 .rest h1 {
-  font-family: "Helvetica medium";
-  font-size: 37px;
+  font-family: "Helvetica";
+  font-weight: 600;
+  font-size: 3vw;
   line-height: 47px;
   letter-spacing: 2.67px;
   text-align: left;
