--- a/epicure/src/component/SingleDish/SingleDish.css
+++ b/epicure/src/component/SingleDish/SingleDish.css
@@ -1,15 +1,15 @@
-.dish {
+/* .dish {
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 33%;
   background-color: #faf2e3;
   gap: 10px;
-}
-.food {
+} */
+/* .food {
   width: 100%;
 }
-.dish .info {
+.dish .icons {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -32,4 +32,4 @@
   text-align: center;
 }
 .dish .price {
-}
+} */
