--- a/epicure/src/component/SingleRest/SingleRest.css
+++ b/epicure/src/component/SingleRest/SingleRest.css
@@ -1,4 +1,4 @@
-.rest {
+/* .rest {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -8,7 +8,7 @@
 .food {
   width: 100%;
 }
-.rest .info {
+.rest .icons {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -31,4 +31,4 @@
 }
 .rating {
   scale: 0.6;
-}
+} */
