--- a/epicure/src/component/Home/Icons/Icons.css
+++ b/epicure/src/component/Home/Icons/Icons.css
@@ -3,18 +3,20 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: 110px;
-  gap: 30px;
+  margin-top: 7.5vw;
+  padding-bottom: 2.5vw;
+  gap: 2.4vw;
+  background: rgb(250, 250, 250);
 }
 #icons {
   display: flex;
-  gap: 105px;
+  gap: 7vw;
 }
 #icons section {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 35px;
+  gap: 2.4vw;
 }
 #icons img{
     height: 5vw;
@@ -24,7 +26,7 @@
   font-family: "Helvetica";
   font-size: 3vw;
   font-weight: bold;
-  line-height: 35px;
+  line-height: 2.4vw;
   letter-spacing: 2.14px;
   text-align: center;
 }
@@ -32,7 +34,7 @@
 #icons h2 {
 font-size: 2vw;
 font-weight: 200;
-line-height: 30px;
+line-height: 2vw;
 letter-spacing: 1.97px;
 text-align: center;
 }
