--- a/epicure/src/component/Navbar/navStyle.css
+++ b/epicure/src/component/Navbar/navStyle.css
@@ -44,3 +44,26 @@ nav {
 #search input {
   all: unset;
 }
+
+.underline {
+  font-family: "Helvetica";
+  font-size: 1.2vw;
+  font-weight: bold;
+  line-height: 1.5vw;
+  letter-spacing: 1.92px;
+  text-align: left;
+  border-bottom: 1.8px solid rgba(222, 146, 0, 0.9);
+  cursor: pointer;
+  text-decoration: none;
+  color: black;
+}
+.not-active {
+  all: unset;
+  font-family: "Helvetica";
+  font-size: 1.2vw;
+  font-weight: bold;
+  line-height: 1.5vw;
+  letter-spacing: 1.92px;
+  text-align: left;
+  cursor: pointer;
+}
