--- a/epicure/src/component/Home/WeekChef/WeekChef.css
+++ b/epicure/src/component/Home/WeekChef/WeekChef.css
@@ -23,11 +23,11 @@
   display: flex;
   flex-direction: column;
   position: relative;
-  background-color: black;
-  height: 26vw;
-  width: 33vw;
 }
 #chef-img img {
+  height: 26vw;
+  width: 33vw;
+  object-fit: cover;
 }
 #chef-img h1 {
   display: flex;
@@ -36,8 +36,9 @@
   position: absolute;
   background-color: rgba(255, 255, 255, 0.8);
   width: 100%;
-  bottom: -4.9vw;
+  bottom: -0.1vw;
   height: 5.5vw;
+  font-size: 3vw;
 }
 #chef-about {
   font-family: "Helvetica";
