--- a/epicure/src/component/Card/Card.css
+++ b/epicure/src/component/Card/Card.css
@@ -1,7 +1,11 @@
+
 .card {
   display: flex;
   flex-direction: column;
   width: 27%;
+}
+.card:hover{
+  cursor: pointer;
 }
 .rest {
     height: fit-content;
