--- a/epicure/src/component/Restaurant/SingleRestPage/SingleRest.css
+++ b/epicure/src/component/Restaurant/SingleRestPage/SingleRest.css
@@ -1,7 +1,48 @@
+#main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0 9vw;
+}
 .single-rest {
-  background-color: none;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  gap: 2vw;
+  /* padding: 0 9vw; */
 }
 
-.card-downer-div {
-  background-color: none;
+.single-rest img {
+  width: 100%;
+  height: 30vw;
 }
+.single-rest div {
+  all: unset;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1vw;
+}
+
+.single-rest div h1 {
+  font-size: 4vw;
+  font-weight: bold;
+  line-height: 4.5vw;
+  letter-spacing: 3.6px;
+}
+.single-rest div p {
+  font-size: 2.2vw;
+  font-weight: 200;
+  line-height: 2.5vw;
+  letter-spacing: 1.97px;
+}
+.rating {
+  all: unset;
+  display: none;
+}
+.open-now{
+  margin: 2.3vw 0 3.3vw 0;
+}
+
+
