--- a/epicure/src/component/Filter/Filter.css
+++ b/epicure/src/component/Filter/Filter.css
@@ -11,10 +11,14 @@
   gap: 3vw;
 }
 #range-div {
-    background-color: (250, 250, 250, 1);
+    background-color: rgba(245, 245, 245, 1);
   display: flex;
   justify-content: center;
+  align-items: center;
   gap: 3.5vw;
+  width: 100%;
+  height: 6.5vw;
+
 }
 #restaurant{
     width: 100%;
