--- a/epicure/src/component/Restaurant/DishesRender/DishesRender.css
+++ b/epicure/src/component/Restaurant/DishesRender/DishesRender.css
@@ -1,5 +1,5 @@
 .dish-div {
-    margin-top: 3.3vw;
+  margin-top: 3.3vw;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -25,10 +25,12 @@
   gap: 8px;
   background-color: #faf2e3;
 }
-#filter-div{
-    margin: 3.5vw;
+#filter-dish {
+  display: flex;
+  justify-content: center;
+  gap: 3vw;
+  margin: 3.5vw;
 }
-button:focus{
-    text-decoration: underline 2px rgba(222, 146, 0, 0.9);
-
+#filter-dish button:focus {
+  text-decoration: underline 2px rgba(222, 146, 0, 0.9);
 }
