--- a/epicure/src/component/Buttons/RatingButton/RatingButton.css
+++ b/epicure/src/component/Buttons/RatingButton/RatingButton.css
@@ -22,8 +22,10 @@
     left: -30%;
     top: 100%;
     gap: 0;
+    z-index: 1;
   }
   form{
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -47,4 +49,16 @@
   .checkbox{
     all: unset;
     cursor: pointer;
+  }
+label{
+  display: flex;
+  align-items: center;
+  gap: 15px;
+}
+  input[type=checkbox]{
+    z-index: 1;
+    border: 1px black solid;
+    width: 10px;
+    height: 10px;
+    /* position: absolute; */
   }
