--- a/epicure/src/component/DishModal/DishModal.css
+++ b/epicure/src/component/DishModal/DishModal.css
@@ -18,7 +18,11 @@
   flex-direction: column;
   align-items: center;
   width: 40vw;
-  height: 90%;
+  height: 100%;
+  overflow-y: scroll;
+}
+#modal::-webkit-scrollbar {
+  display: none;
 }
 #modal div {
   background-color: white;
@@ -32,12 +36,20 @@
   height: 20vw;
 }
 #modal .card-downer-div {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
   width: 16vw;
   padding: 0 12vw;
   height: fit-content;
+}
+#modal .card-downer-div h1 {
+  font-family: "Helvetica light";
+  font-size: 2vw;
+  line-height: 2vw;
+  letter-spacing: 2.6px;
+  text-align: center;
+  margin-top: 1vw;
 }
 #modal #about-dish {
   height: fit-content;
@@ -51,12 +63,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 3vw 12vw;
-  gap: 3vw;
+  padding: 0vw 12vw;
+  gap: 1.5vw;
 }
 #modal-bottom h1 {
   text-decoration: underline rgba(222, 146, 0, 0.9);
-  font-size: 1.7vw;
+  font-size: 1.5vw;
   line-height: 1.2vw;
   letter-spacing: 1.9px;
   text-align: center;
@@ -65,7 +77,7 @@
 #modal label {
   align-self: flex-start;
   text-align: left;
-  font-size: 1.25vw;
+  font-size: 1.2vw;
   font-weight: 200;
   line-height: 18px;
   letter-spacing: 1.9px;
@@ -80,7 +92,11 @@
 #quantity div {
   display: flex;
   justify-content: center;
+  align-items: center;
   gap: 1.5vw;
+}
+#quantity p {
+  font-size: 2vw;
 }
 #cart-btn {
   all: unset;
@@ -93,4 +109,5 @@
   letter-spacing: 2.6px;
   text-align: center;
   padding: 1vw 2.6vw;
+  margin-bottom: 2vw;
 }
