--- a/epicure/src/component/Navbar/navStyle.css
+++ b/epicure/src/component/Navbar/navStyle.css
@@ -3,7 +3,7 @@ nav {
   flex-direction: row;
   justify-content: space-between;
   align-self: center;
-  height: 36px;
+  height: 2.5vw;
   width: 90%;
   align-items: flex-end;
   padding: 14px 5%;
