--- a/epicure/src/component/DishModal/DishModal.css
+++ b/epicure/src/component/DishModal/DishModal.css
@@ -18,7 +18,8 @@
   flex-direction: column;
   align-items: center;
   width: 40vw;
-  height: 100%;
+  /* height: 100%; */
+  max-height: 90vh;
   overflow-y: scroll;
 }
 #modal::-webkit-scrollbar {
@@ -31,6 +32,9 @@
   color: white;
   font-size: 2vw;
   align-self: self-start;
+}
+#close:hover{
+  font-weight: bolder;
 }
 #modal .food {
   height: 20vw;
