--- a/epicure/src/component/Hero/heroStyle.css
+++ b/epicure/src/component/Hero/heroStyle.css
@@ -14,19 +14,18 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 220px;
+  height: 15vw;
   width: 68vh;
-  padding: 10px 10%;
-  /* margin: 236px 332px; */
+  padding: 10px 10vw;
   background-color: rgba(255, 255, 255, 0.695);
 }
 #white-div p {
   z-index: 1;
   padding: 0 30px;
   text-align: center;
-  font-size: 32px;
+  font-size: 2.2vw;
   font-weight: 400;
-  line-height: 40px;
+  line-height: 2.7vw;
   letter-spacing: 1.9700000286102295px;
 }
 #search-div {
@@ -35,21 +34,76 @@
   justify-content: flex-start;
   border: 1px black solid;
   width: 100%;
-  height: 40px;
+  height: 2.7vw;
   border-radius: 4px;
   padding: 6px 12px 6px 12px;
-  gap: 10px;
+  gap: 1vw;
 }
 #search-div input[type="text"] {
   all: unset;
   font-family: "Helvetica bold";
-  font-size: 25px;
+  font-size: 1.7vw;
   /* font-weight: bolder; */
-  height: 37px;
+  height: 2.5vw;
   width: 80%;
   color: rgb(0, 0, 0);
 }
 input[type="text"]::placeholder {
   font-family: "Helvetica";
-  font-size: 25px;
+  font-size: 1.7vw;
+}
+
+@media screen and (max-width: 450px) {
+  #hero {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  #background-img {
+    object-fit: cover;
+    width: 100%;
+    height: 72vw;
+    max-height: 90vh;
+  }
+  #white-div{
+    height: 38vw;
+    width: 80vw;
+    padding: 16px 10px;
+    gap: 20px;
+
+  }
+  #white-div p {
+    z-index: 1;
+    padding: 0 ;
+    text-align: center;
+    font-size: 6vw;
+    font-weight: 200;
+    line-height: 6vw;
+    letter-spacing: 1.97px;
+  }
+  #search-div {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    border: 1px black solid;
+    width: 85%;
+    height:8vw;
+    border-radius: 4px;
+    padding: 6px 12px 6px 12px;
+    gap: 10px;
+  }
+  #search-div input[type="text"] {
+    all: unset;
+    font-family: "Helvetica bold";
+    font-size: 4vw;
+    /* font-weight: bolder; */
+    height: 5vw;
+    width: 80%;
+    color: rgb(0, 0, 0);
+  }
+  input[type="text"]::placeholder {
+    font-family: "Helvetica light";
+    font-weight: bold;
+    font-size: 3.7vw;
+  }
 }
