--- a/epicure/src/component/Home/Icons/Icons.css
+++ b/epicure/src/component/Home/Icons/Icons.css
@@ -38,3 +38,49 @@ line-height: 2vw;
 letter-spacing: 1.97px;
 text-align: center;
 }
+@media screen and (max-width: 450px){
+  #icons-main {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 7.5vw;
+    padding: 4vw;
+    gap: 7vw;
+    background: rgb(250, 250, 250);
+  }
+
+  #icons {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 7vw;
+  }
+  #icons section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 4vw;
+  }
+  #icons img{
+      height: 15vw;
+  }
+  
+  #icons-main h1 {
+    font-family: "Helvetica";
+    font-size: 4vw;
+    font-weight: bold;
+    line-height: 2.4vw;
+    letter-spacing: 2.14px;
+    text-align: center;
+  }
+  
+  #icons h2 {
+  font-size: 5vw;
+  font-weight: 200;
+  line-height: 10vw;
+  letter-spacing: 1.97px;
+  text-align: center;
+  }
+}
