--- a/epicure/src/component/Restaurant/SingleRestPage/SingleRest.css
+++ b/epicure/src/component/Restaurant/SingleRestPage/SingleRest.css
@@ -45,5 +45,31 @@
   height: 2vw;
   margin: 2.3vw 0 3.3vw 0;
 }
+@media screen and (max-width: 450px) {
+  #main {
+    padding: 0;
+  }
+
+  .single-rest{
+    align-items: flex-start;
+  }
+  .single-rest img {
+    width: 100%;
+    height: 72vw;
+  }
+  .single-rest .card-downer-div{
+    padding-top: 3vw;
+    padding-left: 3vw;
+    gap: 4vw;
+    align-items: flex-start;
+  }
+  .open-now-div{
+    padding-left: 3vw;
+    align-self: flex-start;
+  }
+  .open-now{
+    height: 5vw;
+  }
+}
 
 
