login in front + deleting restaurants and dishes

--- a/front/src/component/LogIn/LogIn.css
+++ b/front/src/component/LogIn/LogIn.css
@@ -68,7 +68,11 @@
     letter-spacing: 2.67px;
   }
   #black-style{
+    cursor: pointer;
       background-color: black;
+  }
+  .login-btn:hover{
+    cursor: no-drop;
   }
   #login-details p {
     cursor: pointer;
