--- a/front/src/component/Chefs/SingleChef/SingleChef.css
+++ b/front/src/component/Chefs/SingleChef/SingleChef.css
@@ -1,4 +1,5 @@
 #chef-container{
+    position: relative;
     display: flex;
     flex-direction: column;
     gap: 4vw;
@@ -20,4 +21,87 @@
     justify-content: center;
     gap: 3vw;
     flex-wrap: wrap;
+}
+#delete-chef-btn{
+    position: absolute;
+    margin-top: 5px;
+    font-family: Helvetica light;
+    font-weight: bold;
+    right: 5px;
+    bottom: 0;
+    width: 9vw;
+    color: white;
+    background-color: black;
+    padding: 3px;
+  }
+  #delete-chef-btn:hover{
+    background-color: darkred;
+  }
+#add-rest-btn{
+    position: absolute;
+    margin-top: 5px;
+    font-family: Helvetica light;
+    font-weight: bold;
+    left: 5px;
+    bottom: 0;
+    width: 9vw;
+    color: rgb(0, 0, 0);
+    background-color: rgb(255, 255, 255);
+    border: 1px black solid;
+  }
+  #add-rest-btn:hover{
+    background-color: rgb(24, 157, 12);
+  }
+#add-rest-modal{
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: 2;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#rest-details{
+  position: relative;
+  background-color: white;
+  z-index: 100;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  width: 40vw;
+  max-height: 90vh;
+  gap: 7px;
+  /* overflow-y: auto; */
+}
+#rest-details #close{
+  position: absolute;
+  top: -20px;
+}
+#submit-btn{
+  all: unset;
+  width: 12.6vw;
+  cursor: pointer;
+  background-color: black;
+  color: white;
+  font-size: 1.25vw;
+  line-height: 1.3vw;
+  letter-spacing: 2.6px;
+  text-align: center;
+  padding: 1vw 2.6vw;
+  margin-bottom: 2vw;
+}
+#rest-details form{
+  gap: 7px;
+}
+#hours-div{
+  display: flex;
+  gap: 20px;
+}
+#sign-details #hours-div input{
+  width: 50px;
 }
